--- a/Module-3/css/style.css
+++ b/Module-3/css/style.css
@@ -1,1 +1,62 @@
-
+*{
+    box-sizing: border-box;
+    font-family: 'Lora';
+    overflow: auto;
+    font-weight: bolder;
+}
+#header-nav{
+    border: 3px solid black;
+    background-color: grey;
+    width: 100%;
+}
+h1{    
+    font-family: Verdana;
+    font-weight: bolder;
+}
+h2{
+    text-align: center;
+    text-decoration: underline;
+}
+h3{
+    text-align: center;
+    font-weight: bolder;
+}
+hr{
+    width: 97%;
+}
+#Navbar-Link{
+    text-decoration: none;
+    color: black;
+}
+#Navbar-Link:hover{
+    color: black;
+}
+#content{
+    border: 20px solid transparent;
+}
+#list{
+    text-align: center;
+    display: block;
+    list-style: none;
+    border: 2px solid black;
+    font-size: larger;
+    @media (min-width: 768px) {
+        display: none;
+    }
+}
+#button {
+    border: 2px solid white;
+    @media (min-width: 768px) {
+        display: none;
+    }
+  }
+#Chicken-text, #Beef-text, #Sushi-text{
+    background-color: darkgray;
+    padding: 5px;
+    margin-top: 5px;
+    float: left;
+    border: 1px solid white;
+    @media (max-width: 768px) {
+        border: 20px solid white;
+    }
+}
